# CrowdworksProjects

./: .gitignore
algorithm/: bfs.py  (+3 more)
langchain-extensions/: .gitignore  Makefile  README.md  clova_snippet.py  conftest.py  pyproject.toml  requirements.txt
langchain-extensions/directories/: __init__.py
langchain-extensions/fixtures/: sample.txt
langchain-extensions/langchain_extensions/document_loaders/: __init__.py
langchain-extensions/langchain_extensions/language_models/: __init__.py  fixtures.py  naver.py
langchain-extensions/langchain_extensions/mixins/: __init__.py
langchain-extensions/langchain_extensions/papers/: raptor.py
langchain-extensions/langchain_extensions/vectorstores/: __init__.py
langchain-extensions/tests/: test_apply.py  test_csv.py
rag-backend/: .dockerignore  Makefile  README.md  gunicorn.conf.py  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_chatbot.py
rag-backend/.streamlit/: config.toml
rag-backend/chroma/age-limit/: chroma.sqlite3
rag-backend/chroma/coverage-limit/: chroma.sqlite3
rag-backend/chroma/insurance-collateral/: chroma.sqlite3
rag-backend/chroma/insurance-description/: chroma.sqlite3
rag-backend/directories/: __init__.py
rag-backend/dockers/: fastapi.Dockerfile  streamlit.Dockerfile
rag-backend/fixtures/: 미래에셋생명_MappingDB_v0.2.xlsx  미래에셋생명_유사질병 데이터.xlsx  미래에셋생명_주계약가입나이.xlsx  미래에셋생명_질병가이드라인.xlsx  미래에셋생명_질병별_필요서류_DB.xlsx
rag-backend/helms/miraeasset-backend/: Chart.yaml  values.prod.yaml
rag-backend/helms/miraeasset-frontend/: Chart.yaml  values.prod.yaml
rag-backend/langchain_extensions/embeddings/: __init__.py  naver.py
rag-backend/langchain_extensions/language_models/: crowdworks.py  naver.py
rag-backend/langchain_extensions/papers/: __init__.py  raptor.py
rag-backend/markdowns/: GetDisease.md  GetInsuranceRider.md  GetJoinCondition.md  LANGCHAIN.md
rag-backend/rag_backend/: __init__.py
rag-backend/rag_backend/agents/: __init__.py  clova.py  gpt.py  parser.py  persistences.py  prompts.py  react.py  retrievers.py  tools.py
rag-backend/rag_backend/annotations/: __init__.py  deprecated.py
rag-backend/rag_backend/apis/: __init__.py
rag-backend/rag_backend/apps/: __init__.py
rag-backend/rag_backend/assemble/: event.py  middleware.py
rag-backend/rag_backend/configs/: __init__.py
rag-backend/rag_backend/conversation/: __init__.py
rag-backend/rag_backend/database/: __init__.py
rag-backend/rag_backend/models/: __init__.py
rag-backend/rag_backend/predefined/: __init__.py  disease_matrix_2.py  essential_question.py
rag-backend/rag_backend/schemas/: __init__.py
rag-backend/rag_backend/static/: cheatsheet.html
rag-backend/tests/: conftest.py
rag-backend/tests/apis/: test_examples.py
(+73 files in other folders)
