[tool.poetry]
name = "langchain-extensions"
version = "0.1.17"
description = ""
authors = ["nelly <yongwoo@crowdworks.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
pytest = "^8.0.1"
chromadb = "^0.4.22"
black = "^24.2.0"
tqdm = "^4.66.2"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
umap-learn = "^0.5.5"

[tool.poetry.group.dev.dependencies]
mock = "^5.1.0"
pytest = "^8.0.0"
pytest-env = "^1.1.3"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.4"
pytest-freezegun = "^0.4.2"
pytest-xdist = "^3.5.0"
pre-commit = "^3.2.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode  = "auto"
testpaths     = ["tests", "directories"]
addopts       = "--verbose"
markers       = "asyncio: mark a test as a coroutine, it will be run using an asyncio event loop"
filterwarnings = "ignore::DeprecationWarning:.*:"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
